# tui-markup

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile.toml  README.md  gramma.ebnf  grammar.ebnf  rustfmt.toml
docs/: ansi-tags.ebnf  ratatui-tags.ebnf  syntax.ebnf  syntax.rr  tui-tags.ebnf
examples/: ansi.rs  common.rs  crossterm.rs  gen_index.py  gen_indexed.py  help.rs  help.txt  indexed.txt  ratatui.rs  readme.rs  tui.rs
src/: error.rs  item.rs  lib.rs  parser.rs  tag.rs
src/generator/: helper.rs  mod.rs  span.rs  tag.rs
src/generator/ansi/: mod.rs  span.rs  tag.rs
src/generator/crossterm/: mod.rs  span.rs  tag.rs
src/generator/helper/: error.rs  flatten.rs  mod.rs  tag.rs  unescape.rs
src/generator/ratatui/: mod.rs  span.rs  tag.rs  test.rs
src/generator/tui/: error.rs  mod.rs  span.rs  tag.rs  test.rs
src/parser/: error.rs  item.rs  mod.rs  test.rs
