[package]
name = "tui-markup"
version = "0.5.1-dev"
authors = ["7sDream <i@7sdre.am>"]
edition = "2024"
description = "markup language for terminal styled text"
documentation = "https://docs.rs/tui-markup"
readme = "README.md"
homepage = "https://github.com/7sDream/tui-markup"
repository = "https://github.com/7sDream/tui-markup"
license = "BSD-3-Clause-Clear"
keywords = ["terminal", "tui", "markup", "text", "parser"]
categories = [
    "command-line-interface",
    "parser-implementations",
    "text-processing",
]
exclude = ["examples/*.png", "examples/*.py", "docs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
ansi = ["dep:ansi_term"]

[dependencies]
# parser
winnow = { version = "1", default-features = false, features = ["std", "ascii"] }

# generator
ansi_term = { version = "0.12", optional = true }
ratatui = { version = "0.30", optional = true, default-features = false }
crossterm = { version = "0.29", optional = true, default-features = false, features = [
    "windows",
] }

[dev-dependencies]
ratatui = "0.30"
crossterm = "0.29"
ansi_term = "0.12"

[[example]]
name = "ratatui"
required-features = ["ratatui"]

[[example]]
name = "ansi"
required-features = ["ansi"]

[[example]]
name = "crossterm"
required-features = ["crossterm"]

[[example]]
name = "readme"
required-features = ["ansi"]

[[example]]
name = "common"
crate-type = ["rlib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
